fix: fixed elements from infinitely appending
Previously, DocumentFragments would continually append without
clearing the current board state. Added a check and control flow.

--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,19 @@ button {
     Card container
  */
 
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+}
+
+.card {
+    width: 20%;
+    background-color: #6495ed;
+    text-align: inherit;
+    margin: 1em;
+}
+
 .card-set-name {
     text-decoration: underline;
     text-align: center;
