feat: too much stuff...
I was bad and not committing frequently.
Implemented matching logic, card shuffling, save game state,
load previous game state, set move counter, etc.

--- a/css/main.css
+++ b/css/main.css
@@ -73,3 +73,15 @@ button {
     text-decoration: underline;
     text-align: center;
 }
+
+.matched {
+    background-color: red;
+}
+
+.open {
+    background-color: green;
+}
+
+.hidden {
+    display: none;
+}
