--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
 html {
     box-sizing: border-box;
+    max-width: 900px;
+    text-align: center;
+    margin: 0 auto 0 auto;
 }
 
 *,
@@ -12,6 +15,10 @@ button {
     border-radius: 10px;
 }
 
+main {
+    max-width: 80%;
+    margin: 0 auto 0 auto;
+}
 /**
     Controls header
  */
@@ -20,6 +27,7 @@ button {
     margin: 1em 2.5% 0 2.5%;
     display: flex;
     flex-wrap: wrap;
+    text-align: left;
 }
 
 .controls,
@@ -59,14 +67,23 @@ button {
 .card-container {
     display: flex;
     flex-wrap: wrap;
-    text-align: center;
+    text-align: inherit;
 }
 
 .card {
-    width: 20%;
+    width: 22%;
     background-color: #6495ed;
     text-align: inherit;
-    margin: 1em;
+    margin: 8px;
+    height: 120px;
+    border-radius: 10px;
+}
+
+.card h3 {
+    padding: 40px 0 40px 0;
+    line-height: 40px;
+    margin: 0;
+    display: none;
 }
 
 .card-set-name {
@@ -78,8 +95,16 @@ button {
     background-color: red;
 }
 
+.matched h3 {
+    display: block;
+}
+
 .open {
     background-color: green;
+}
+
+.open h3 {
+    display: block;
 }
 
 .hidden {
