--- a/css/main.css
+++ b/css/main.css
@@ -63,23 +63,21 @@ main {
  */
 
 .card-container {
-    display: flex;
-    flex-wrap: wrap;
-    text-align: inherit;
+    display: grid;
+    grid-template-columns: 24% 24% 24% 24%;
+    grid-gap: 8px;
+    margin: 0 auto;
 }
 
 .card {
-    width: 22%;
     background-color: #6495ed;
     text-align: inherit;
-    margin: 8px;
-    height: 120px;
+    padding-bottom: 100%;
     border-radius: 10px;
+    position: relative;
 }
 
 .card h3 {
-    padding: 40px 0 40px 0;
-    line-height: 40px;
     margin: 0;
     display: none;
 }
@@ -93,16 +91,17 @@ main {
     background-color: red;
 }
 
-.matched h3 {
-    display: block;
-}
-
 .open {
     background-color: green;
 }
 
-.open h3 {
-    display: block;
+.open h3,
+.matched h3 {
+    display: inherit;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .hidden {
